Added Industry functionality - Add update only. Not currently viewable or searchable

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
+	"AGRICULTURE": "Landwirtschaft",
 	"android": "Android",
 	"ANDROID": "Android",
 	"angular": "Angular",
@@ -315,6 +316,7 @@
 	"arenella-new-candidate-function-group": "Funktionsgruppe",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Stunde",
+	"arenella-new-candidate-industries-group": "Branchen",
 	"arenella-new-candidate-introduction": "Einführung",
 	"arenella-new-candidate-location": "Standort",
 	"arenella-new-candidate-no": "Nein",
@@ -762,6 +764,8 @@
 	"arenella-suggestions-spanish": "Spanisch",
 	"arenella-suggestions-to": "Zu",
 	"AUSTRIA": "Österreich",
+	"AUTOMOTIVE": "Automobil",
+	"AVIATION": "Luftfahrt",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
 	"BELGIUM": "Belgien",
@@ -771,6 +775,7 @@
 	"BULGARIAN": "Bulgarisch",
 	"CANADA": "Kanada",
 	"CENTRAL_EUROPE": "Mitteleuropa",
+	"CONSTRUCTION": "Konstruktion",
 	"create-candidate--profile-image": "Es gab ein Problem mit dem Profilbild",
 	"create-candidate-cv-format": "Der Lebenslauf muss im Word- oder PDF-Format vorliegen und kleiner als 1 MB sein",
 	"create-candidate-failure": "Kandidat kann nicht hinzugefügt werden",
@@ -780,6 +785,7 @@
 	"CROATIAN": "Kroatisch",
 	"CSHARP_DEV": "C#-Entwickler",
 	"CSHARP_DEV_SHORT": "C#",
+	"CYBER_SECURITY": "Cybersicherheit",
 	"CYPRUS": "Zypern",
 	"CZECH": "Tschechisch",
 	"CZECH_REPUBLIC": "Tschechische Republik",
@@ -790,16 +796,20 @@
 	"DENMARK": "Dänemark",
 	"DUTCH": "Niederländisch",
 	"EASTERN_EUROPE": "Osteuropa",
+	"EDUCATION": "Ausbildung",
+	"ENERGY": "Energie",
 	"ENGLISH": "Englisch",
 	"ESTONIA": "Estland",
 	"ESTONIAN": "Estnisch",
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
+	"EUROPEAN_COMMISSION": "Europäische Kommission",
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Versagen",
 	"FINLAND": "Finnland",
 	"FINNISH": "Finnisch",
+	"FINTECH": "Fintech",
 	"FRANCE": "Frankreich",
 	"FRENCH": "Französisch",
 	"func-ba": "Wirtschaftsanalyst",
@@ -818,15 +828,20 @@
 	"func-tester": "Testanalytiker",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Webentwickler",
+	"GAMBLING": "Glücksspiel",
+	"GAMING": "Spielen",
 	"GERMAN": "Deutsch",
 	"GERMANY": "Deutschland",
 	"go": "Go",
 	"GO": "Go",
+	"GOVERNMENT": "Regierung",
 	"GREECE": "Griechenland",
 	"GREEK": "Griechisch",
+	"HEALTHCARE": "Gesundheitspflege",
 	"Hide": "Verstecken",
 	"hide-filters": "Filter ausblenden",
 	"HINDI": "Hindi",
+	"HOSPITALITY": "Gastfreundschaft",
 	"HUNGARIAN": "Ungarisch",
 	"HUNGARY": "Ungarn",
 	"INDIA": "INDIEN",
@@ -852,6 +867,7 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " Zu ",
 	"info-item-title-years-experience": "",
+	"INSURANCE": "Versicherung",
 	"ios": "IOS",
 	"IOS": "Ios",
 	"IRELAND": "Irland",
@@ -872,9 +888,11 @@
 	"LITHUANIAN": "Litauisch",
 	"login-user-invalid-login": "Ungültiger Anmeldeversuch",
 	"login-user-unable-to-send-email": "E-Mail kann nicht gesendet werden. Möglicherweise unbekannte E-Mail.",
+	"LOGISTICS": "Logistik",
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltesisch",
+	"MILITARY": "Militär",
 	"mp-failure-failed-to-update-open-position": "Offene Position konnte nicht aktualisiert werden",
 	"mp-left-failure-failed-to-persits-new-open-position": "Neue offene Position konnte nicht beibehalten werden",
 	"mp-left-mnu-city": "Stadt",
@@ -922,6 +940,7 @@
 	"php": "PHP",
 	"PHP": "Php",
 	"POLAND": "Polen",
+	"POLICE": "Polizeiù",
 	"POLISH": "Polieren",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugiesisch",
@@ -1003,6 +1022,7 @@
 	"SOFTWARE_DEVELOPER": "Softwareentwickler",
 	"SOFTWARE_DEVELOPER_SHORT": "Softwareentwicklung",
 	"SOUTHERN_EUROPE": "Südeuropa",
+	"SPACE": "Raum",
 	"SPAIN": "Spanien",
 	"SPANISH": "Spanisch",
 	"stat-candidate-availability": "",
@@ -1045,10 +1065,12 @@
 	"SWEDEN": "Schweden",
 	"SWEDISH": "Schwedisch",
 	"SWITZERLAND": "Schweiz",
+	"TELECOMS": "Telekommunikation",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
+	"TOURISM": "Tourismus",
 	"TURKEY": "Truthahn",
 	"TURKISH": "Türkisch",
 	"UI_UX": "UI/UX",
