--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+	"AGRICULTURE": "Agriculture",
 	"android": "Android",
 	"ANDROID": "Android",
 	"angular": "Angular",
@@ -315,6 +316,7 @@
 	"arenella-new-candidate-function-group": "Function Group",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Hour",
+	"arenella-new-candidate-industries-group": "Industries",
 	"arenella-new-candidate-introduction": "Introduction",
 	"arenella-new-candidate-location": "Location",
 	"arenella-new-candidate-no": "No",
@@ -762,6 +764,8 @@
 	"arenella-suggestions-spanish": "Spanish",
 	"arenella-suggestions-to": "TO",
 	"AUSTRIA": "Austria",
+	"AUTOMOTIVE": "Automotive",
+	"AVIATION": "Aviation",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
 	"BELGIUM": "Belgium",
@@ -771,6 +775,7 @@
 	"BULGARIAN": "Bulgarian",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Central Europe",
+	"CONSTRUCTION": "Construction",
 	"create-candidate--profile-image": "There was an issue with the profile image",
 	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
 	"create-candidate-failure": "Unable to add Candidate",
@@ -780,6 +785,7 @@
 	"CROATIAN": "Croatian",
 	"CSHARP_DEV": "C# Developer",
 	"CSHARP_DEV_SHORT": "C#",
+	"CYBER_SECURITY": "Cyber Security",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Czech",
 	"CZECH_REPUBLIC": "Czech Republic",
@@ -790,16 +796,20 @@
 	"DENMARK": "Denmark",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
+	"EDUCATION": "Education",
+	"ENERGY": "Energy",
 	"ENGLISH": "English",
 	"ESTONIA": "Estonia",
 	"ESTONIAN": "Estonian",
 	"EU_REMOTE": "Europe - Remote",
 	"EUROPE": "Europe",
+	"EUROPEAN_COMMISSION": "European Commission",
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Failure",
 	"FINLAND": "Finland",
 	"FINNISH": "Finnish",
+	"FINTECH": "Fintech",
 	"FRANCE": "France",
 	"FRENCH": "French",
 	"func-ba": "Business Analyst",
@@ -818,15 +828,20 @@
 	"func-tester": "Test Analyst",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Web Developer",
+	"GAMBLING": "Gambling",
+	"GAMING": "Gaming",
 	"GERMAN": "German",
 	"GERMANY": "Germany",
 	"go": "Go",
 	"GO": "Go",
+	"GOVERNMENT": "Government",
 	"GREECE": "Greece",
 	"GREEK": "Greek",
+	"HEALTHCARE": "Healthcare",
 	"Hide": "Hide",
 	"hide-filters": "Hide filters",
 	"HINDI": "Hindi",
+	"HOSPITALITY": "Hospitality",
 	"HUNGARIAN": "Hungarian",
 	"HUNGARY": "Hungary",
 	"INDIA": "India",
@@ -852,6 +867,7 @@
 	"info-item-title-security-clearance": "Security Clearance",
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
+	"INSURANCE": "Insurance",
 	"ios": "IOS",
 	"IOS": "Ios",
 	"IRELAND": "Ireland",
@@ -872,9 +888,11 @@
 	"LITHUANIAN": "Lithuanian",
 	"login-user-invalid-login": "Invalid Login attempt",
 	"login-user-unable-to-send-email": "Unable to send email. Possibly unknown email.",
+	"LOGISTICS": "Logistics",
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltese",
+	"MILITARY": "Military",
 	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
 	"mp-left-failure-failed-to-persits-new-open-position": "Failed to persist new Open Position",
 	"mp-left-mnu-city": "City",
@@ -922,6 +940,7 @@
 	"php": "PHP",
 	"PHP": "Php",
 	"POLAND": "Poland",
+	"POLICE": "Police",
 	"POLISH": "Polish",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portuguese",
@@ -1003,6 +1022,7 @@
 	"SOFTWARE_DEVELOPER": "Software Developer",
 	"SOFTWARE_DEVELOPER_SHORT": "Software Dev",
 	"SOUTHERN_EUROPE": "Southern Europe",
+	"SPACE": "Space",
 	"SPAIN": "Spain",
 	"SPANISH": "Spanish",
 	"stat-candidate-availability": "Candidate Availability",
@@ -1045,10 +1065,12 @@
 	"SWEDEN": "Sweeden",
 	"SWEDISH": "Swedish",
 	"SWITZERLAND": "Switzerland",
+	"TELECOMS": "Telecoms",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 Months",
+	"TOURISM": "Tourism",
 	"TURKEY": "Turkey",
 	"TURKISH": "Turkish",
 	"UI_UX": "UI/UX",
