--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1,4 +1,5 @@
 {
+	"AGRICULTURE": "Agricultura",
 	"android": "Android",
 	"ANDROID": "Android",
 	"angular": "Angular",
@@ -315,6 +316,7 @@
 	"arenella-new-candidate-function-group": "Grupo de funciones",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Hora",
+	"arenella-new-candidate-industries-group": "Industrias",
 	"arenella-new-candidate-introduction": "Introducción",
 	"arenella-new-candidate-location": "Ubicación",
 	"arenella-new-candidate-no": "No",
@@ -762,6 +764,8 @@
 	"arenella-suggestions-spanish": "Español",
 	"arenella-suggestions-to": "A",
 	"AUSTRIA": "Austria",
+	"AUTOMOTIVE": "Automotor",
+	"AVIATION": "Aviación",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
 	"BELGIUM": "Bélgica",
@@ -771,6 +775,7 @@
 	"BULGARIAN": "Búlgaro",
 	"CANADA": "Canadá",
 	"CENTRAL_EUROPE": "Europa Central",
+	"CONSTRUCTION": "Construcción",
 	"create-candidate--profile-image": "Hubo un problema con la imagen de perfil.",
 	"create-candidate-cv-format": "El CV debe ser en formato Word o PDF y tener un tamaño inferior a 1 MB.",
 	"create-candidate-failure": "No se puede agregar candidato",
@@ -780,6 +785,7 @@
 	"CROATIAN": "Croata",
 	"CSHARP_DEV": "Desarrollador C#",
 	"CSHARP_DEV_SHORT": "C#",
+	"CYBER_SECURITY": "Seguridad cibernética",
 	"CYPRUS": "Chipre",
 	"CZECH": "Checo",
 	"CZECH_REPUBLIC": "República Checa",
@@ -790,16 +796,20 @@
 	"DENMARK": "Dinamarca",
 	"DUTCH": "Holandés",
 	"EASTERN_EUROPE": "Europa Oriental",
+	"EDUCATION": "Educación",
+	"ENERGY": "Energía",
 	"ENGLISH": "Inglés",
 	"ESTONIA": "Estonia",
 	"ESTONIAN": "Estonio",
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
+	"EUROPEAN_COMMISSION": "Comisión Europea",
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Falla",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandés",
+	"FINTECH": "Fintech",
 	"FRANCE": "Francia",
 	"FRENCH": "Francés",
 	"func-ba": "Analista de negocios",
@@ -818,15 +828,20 @@
 	"func-tester": "Analista de pruebas",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Desarrollador web",
+	"GAMBLING": "Juego",
+	"GAMING": "Juego",
 	"GERMAN": "Alemán",
 	"GERMANY": "Alemania",
 	"go": "Go",
 	"GO": "Go",
+	"GOVERNMENT": "Gobierno",
 	"GREECE": "Grecia",
 	"GREEK": "Griego",
+	"HEALTHCARE": "Salud",
 	"Hide": "Esconder",
 	"hide-filters": "Ocultar filtros",
 	"HINDI": "Hindi",
+	"HOSPITALITY": "Hospitalidad",
 	"HUNGARIAN": "Húngaro",
 	"HUNGARY": "Hungría",
 	"INDIA": "India",
@@ -852,6 +867,7 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " A ",
 	"info-item-title-years-experience": "",
+	"INSURANCE": "Seguros",
 	"ios": "IOS",
 	"IOS": "Ios",
 	"IRELAND": "Irlanda",
@@ -872,9 +888,11 @@
 	"LITHUANIAN": "Lituano",
 	"login-user-invalid-login": "Intento de inicio de sesión no válido",
 	"login-user-unable-to-send-email": "No se puede enviar el correo electrónico. Posiblemente se trate de un correo electrónico desconocido.",
+	"LOGISTICS": "Logística",
 	"LUXEMBOURG": "Luxemburgo",
 	"MALTA": "Malta",
 	"MALTESE": "Maltés",
+	"MILITARY": "Militar",
 	"mp-failure-failed-to-update-open-position": "No se pudo actualizar la posición abierta",
 	"mp-left-failure-failed-to-persits-new-open-position": "No se pudo conservar la nueva posición abierta",
 	"mp-left-mnu-city": "Ciudad",
@@ -922,6 +940,7 @@
 	"php": "PHP",
 	"PHP": "Php",
 	"POLAND": "Polonia",
+	"POLICE": "Policía",
 	"POLISH": "Polaco",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugués",
@@ -1003,6 +1022,7 @@
 	"SOFTWARE_DEVELOPER": "Desarrollador de software",
 	"SOFTWARE_DEVELOPER_SHORT": "Desarrollo de software",
 	"SOUTHERN_EUROPE": "Europa del sur",
+	"SPACE": "Espacio",
 	"SPAIN": "España",
 	"SPANISH": "Español",
 	"stat-candidate-availability": "Disponibilidad de candidatos",
@@ -1045,10 +1065,12 @@
 	"SWEDEN": "Suecia",
 	"SWEDISH": "Sueco",
 	"SWITZERLAND": "Suiza",
+	"TELECOMS": "Telecomunicaciones",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
+	"TOURISM": "Turismo",
 	"TURKEY": "Pavo",
 	"TURKISH": "Turco",
 	"UI_UX": "UI/UX",
