--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1,4 +1,5 @@
 {
+	"AGRICULTURE": "Agriculture",
 	"android": "Android",
 	"ANDROID": "Android",
 	"angular": "Angular",
@@ -315,6 +316,7 @@
 	"arenella-new-candidate-function-group": "Groupe de fonctions",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Heure",
+	"arenella-new-candidate-industries-group": "Secteurs",
 	"arenella-new-candidate-introduction": "Introduction",
 	"arenella-new-candidate-location": "Emplacement",
 	"arenella-new-candidate-no": "Non",
@@ -762,6 +764,8 @@
 	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "À",
 	"AUSTRIA": "L'Autriche",
+	"AUTOMOTIVE": "Automobile",
+	"AVIATION": "Aviation",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
 	"BELGIUM": "Belgique",
@@ -771,6 +775,7 @@
 	"BULGARIAN": "Bulgare",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Europe centrale",
+	"CONSTRUCTION": "Construction",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
 	"create-candidate-failure": "Impossible d'ajouter un candidat",
@@ -780,6 +785,7 @@
 	"CROATIAN": "Croate",
 	"CSHARP_DEV": "Développeur C#",
 	"CSHARP_DEV_SHORT": "C#",
+	"CYBER_SECURITY": "Cybersécurité",
 	"CYPRUS": "Chypre",
 	"CZECH": "Tchèque",
 	"CZECH_REPUBLIC": "République tchèque",
@@ -790,16 +796,20 @@
 	"DENMARK": "Danemark",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
+	"EDUCATION": "Éducation",
+	"ENERGY": "Énergie",
 	"ENGLISH": "Anglais",
 	"ESTONIA": "Estonie",
 	"ESTONIAN": "Estonien",
 	"EU_REMOTE": "Europe - À distance",
 	"EUROPE": "L'Europe",
+	"EUROPEAN_COMMISSION": "Commission européenne",
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Échec",
 	"FINLAND": "Finlande",
 	"FINNISH": "Finlandais",
+	"FINTECH": "Fintech",
 	"FRANCE": "France",
 	"FRENCH": "Français",
 	"func-ba": "Analyste d'affaires",
@@ -818,15 +828,20 @@
 	"func-tester": "Analyste de test",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Développeur Web",
+	"GAMBLING": "Jeu d'argent",
+	"GAMING": "Jeux",
 	"GERMAN": "Allemand",
 	"GERMANY": "Allemagne",
 	"go": "Go",
 	"GO": "Go",
+	"GOVERNMENT": "Gouvernement",
 	"GREECE": "Grèce",
 	"GREEK": "Grec",
+	"HEALTHCARE": "Santé",
 	"Hide": "Cacher",
 	"hide-filters": "Masquer les filtres",
 	"HINDI": "Hindi",
+	"HOSPITALITY": "Hospitalité",
 	"HUNGARIAN": "Hongrois",
 	"HUNGARY": "Hongrie",
 	"INDIA": "Inde",
@@ -852,6 +867,7 @@
 	"info-item-title-security-clearance": "Habilitation de sécurité",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
+	"INSURANCE": "Assurance",
 	"ios": "IOS",
 	"IOS": "Ios",
 	"IRELAND": "Irlande",
@@ -872,9 +888,11 @@
 	"LITHUANIAN": "Lituanien",
 	"login-user-invalid-login": "Tentative de connexion invalide",
 	"login-user-unable-to-send-email": "Impossible d'envoyer un e-mail. E-mail peut-être inconnu.",
+	"LOGISTICS": "Logistique",
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malte",
 	"MALTESE": "Maltais",
+	"MILITARY": "Militaire",
 	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
 	"mp-left-failure-failed-to-persits-new-open-position": "Échec de la persistance de la nouvelle position ouverte",
 	"mp-left-mnu-city": "Ville",
@@ -922,6 +940,7 @@
 	"php": "PHP",
 	"PHP": "Php",
 	"POLAND": "Pologne",
+	"POLICE": "Police",
 	"POLISH": "Polonais",
 	"PORTUGAL": "Le Portugal",
 	"PORTUGUESE": "Portugais",
@@ -1003,6 +1022,7 @@
 	"SOFTWARE_DEVELOPER": "Développeur de logiciels",
 	"SOFTWARE_DEVELOPER_SHORT": "Développement",
 	"SOUTHERN_EUROPE": "Europe du sud",
+	"SPACE": "l'espace",
 	"SPAIN": "Espagne",
 	"SPANISH": "Espanol",
 	"stat-candidate-availability": "Disponibilité des candidats",
@@ -1045,10 +1065,12 @@
 	"SWEDEN": "Suède",
 	"SWEDISH": "Suédois",
 	"SWITZERLAND": "Suisse",
+	"TELECOMS": "Télécoms",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mois",
+	"TOURISM": "Tourisme",
 	"TURKEY": "Dinde",
 	"TURKISH": "Turc",
 	"UI_UX": "UI/UX",
