--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1,4 +1,5 @@
 {
+	"AGRICULTURE": "Agricoltura",
 	"android": "Android",
 	"ANDROID": "Android",
 	"angular": "Angular",
@@ -315,6 +316,7 @@
 	"arenella-new-candidate-function-group": "Gruppo di funzioni",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Ora",
+	"arenella-new-candidate-industries-group": "Industrie",
 	"arenella-new-candidate-introduction": "Introduzione",
 	"arenella-new-candidate-location": "Posizione",
 	"arenella-new-candidate-no": "No",
@@ -762,6 +764,8 @@
 	"arenella-suggestions-spanish": "Spagnolo",
 	"arenella-suggestions-to": "A",
 	"AUSTRIA": "Austria",
+	"AUTOMOTIVE": "Automobilistico",
+	"AVIATION": "Aviazione",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
 	"BELGIUM": "Belgio",
@@ -771,6 +775,7 @@
 	"BULGARIAN": "Bulgaro",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Europa centrale",
+	"CONSTRUCTION": "Costruzione",
 	"create-candidate--profile-image": "Si è verificato un problema con l'immagine del profilo",
 	"create-candidate-cv-format": "Il CV deve essere in formato Word o PDF e di dimensioni inferiori a 1 MB",
 	"create-candidate-failure": "Impossibile aggiungere il candidato",
@@ -780,6 +785,7 @@
 	"CROATIAN": "Croato",
 	"CSHARP_DEV": "Sviluppatore C#",
 	"CSHARP_DEV_SHORT": "C#",
+	"CYBER_SECURITY": "Sicurezza informatica",
 	"CYPRUS": "Cipro",
 	"CZECH": "Ceco",
 	"CZECH_REPUBLIC": "Repubblica Ceca",
@@ -790,16 +796,20 @@
 	"DENMARK": "Danimarca",
 	"DUTCH": "Olandese",
 	"EASTERN_EUROPE": "Europa orientale",
+	"EDUCATION": "Istruzione",
+	"ENERGY": "Energia",
 	"ENGLISH": "Inglese",
 	"ESTONIA": "Estonia",
 	"ESTONIAN": "Estone",
 	"EU_REMOTE": "Europa - Remoto",
 	"EUROPE": "Europa",
+	"EUROPEAN_COMMISSION": "Commissione europea",
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Fallimento",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandese",
+	"FINTECH": "Fintech",
 	"FRANCE": "Francia",
 	"FRENCH": "Francese",
 	"func-ba": "Analista aziendale",
@@ -818,15 +828,20 @@
 	"func-tester": "Analista di prova",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Sviluppatore Web",
+	"GAMBLING": "Gioco d'azzardo",
+	"GAMING": "Gioco",
 	"GERMAN": "Tedesco",
 	"GERMANY": "Germania",
 	"go": "Go",
 	"GO": "Go",
+	"GOVERNMENT": "Governo",
 	"GREECE": "Grecia",
 	"GREEK": "Greco",
+	"HEALTHCARE": "Sanitaria",
 	"Hide": "Nascondere",
 	"hide-filters": "Nascondi filtri",
 	"HINDI": "Hindi",
+	"HOSPITALITY": "Ospitalità",
 	"HUNGARIAN": "Ungherese",
 	"HUNGARY": "Ungheria",
 	"INDIA": "India",
@@ -852,6 +867,7 @@
 	"info-item-title-security-clearance": "Autorizzazione di sicurezza",
 	"info-item-title-to": " a",
 	"info-item-title-years-experience": "Anni di esperienza",
+	"INSURANCE": "Assicurazione",
 	"ios": "IOS",
 	"IOS": "Ios",
 	"IRELAND": "Irlanda",
@@ -872,9 +888,11 @@
 	"LITHUANIAN": "Lituano",
 	"login-user-invalid-login": "Tentativo di accesso non valido",
 	"login-user-unable-to-send-email": "Impossibile inviare email. Probabilmente email sconosciuta.",
+	"LOGISTICS": "Logistica",
 	"LUXEMBOURG": "Lussemburgo",
 	"MALTA": "Malta",
 	"MALTESE": "Maltese",
+	"MILITARY": "Militare",
 	"mp-failure-failed-to-update-open-position": "Impossibile aggiornare la posizione aperta",
 	"mp-left-failure-failed-to-persits-new-open-position": "Impossibile mantenere la nuova posizione aperta",
 	"mp-left-mnu-city": "Città",
@@ -922,6 +940,7 @@
 	"php": "PHP",
 	"PHP": "Php",
 	"POLAND": "Polonia",
+	"POLICE": "Polizia",
 	"POLISH": "Polacco",
 	"PORTUGAL": "Portogallo",
 	"PORTUGUESE": "Portoghese",
@@ -1003,6 +1022,7 @@
 	"SOFTWARE_DEVELOPER": "Sviluppatore di software",
 	"SOFTWARE_DEVELOPER_SHORT": "Sviluppo software",
 	"SOUTHERN_EUROPE": "Europa meridionale",
+	"SPACE": "Spazio",
 	"SPAIN": "Spagna",
 	"SPANISH": "Spagnolo",
 	"stat-candidate-availability": "Disponibilità del candidato",
@@ -1045,10 +1065,12 @@
 	"SWEDEN": "Svezia",
 	"SWEDISH": "Svedese",
 	"SWITZERLAND": "Svizzera",
+	"TELECOMS": "Telecomunicazioni",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mesi",
+	"TOURISM": "Turismo",
 	"TURKEY": "Tacchino",
 	"TURKISH": "Turco",
 	"UI_UX": "UI/UX",
