--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1,4 +1,5 @@
 {
+	"AGRICULTURE": "Landbouw",
 	"android": "Android",
 	"ANDROID": "Android",
 	"angular": "Angular",
@@ -315,6 +316,7 @@
 	"arenella-new-candidate-function-group": "Functiegroep",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Uur",
+	"arenella-new-candidate-industries-group": "Industrieën",
 	"arenella-new-candidate-introduction": "Invoering",
 	"arenella-new-candidate-location": "Plaats",
 	"arenella-new-candidate-no": "Nee",
@@ -762,6 +764,8 @@
 	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "Naar",
 	"AUSTRIA": "Oostenrijk",
+	"AUTOMOTIVE": "Automobiel",
+	"AVIATION": "Luchtvaart",
 	"BA": "Business Analyst",
 	"BA_SHORT": "BA",
 	"BELGIUM": "België",
@@ -771,6 +775,7 @@
 	"BULGARIAN": "Bulgaars",
 	"CANADA": "Canada",
 	"CENTRAL_EUROPE": "Centraal Europa",
+	"CONSTRUCTION": "Bouw",
 	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
 	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
 	"create-candidate-failure": "Kan kandidaat niet toevoegen",
@@ -780,6 +785,7 @@
 	"CROATIAN": "Kroatisch",
 	"CSHARP_DEV": "C#-ontwikkelaar",
 	"CSHARP_DEV_SHORT": "C#",
+	"CYBER_SECURITY": "Cyberbeveiliging",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Tsjechisch",
 	"CZECH_REPUBLIC": "Tsjechische Republiek",
@@ -790,16 +796,20 @@
 	"DENMARK": "Denemarken",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
+	"EDUCATION": "Onderwijs",
+	"ENERGY": "Energie",
 	"ENGLISH": "Engels",
 	"ESTONIA": "Estland",
 	"ESTONIAN": "Estisch",
 	"EU_REMOTE": "Europa - Remote",
 	"EUROPE": "Europa",
+	"EUROPEAN_COMMISSION": "Europese Commissie",
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Fout",
 	"FINLAND": "Finland",
 	"FINNISH": "Fins",
+	"FINTECH": "Fintech",
 	"FRANCE": "Frankrijk",
 	"FRENCH": "Frans",
 	"func-ba": "Bedrijfsanalist",
@@ -818,15 +828,20 @@
 	"func-tester": "Testanalist",
 	"func-uiux": "UI/UX",
 	"func-web-dev": "Webontwikkelaar",
+	"GAMBLING": "Gokken",
+	"GAMING": "Gamen",
 	"GERMAN": "Duitse",
 	"GERMANY": "Duitsland",
 	"go": "Go",
 	"GO": "Go",
+	"GOVERNMENT": "Overheid",
 	"GREECE": "Griekenland",
 	"GREEK": "Grieks",
+	"HEALTHCARE": "Zorg",
 	"Hide": "Verbergen",
 	"hide-filters": "Verberg filters",
 	"HINDI": "Hindi",
+	"HOSPITALITY": "Horeca",
 	"HUNGARIAN": "Hongaars",
 	"HUNGARY": "Hongarije",
 	"INDIA": "Indië",
@@ -852,6 +867,7 @@
 	"info-item-title-security-clearance": "Veiligheidsmachtiging",
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
+	"INSURANCE": "Verzekering",
 	"ios": "IOS",
 	"IOS": "Ios",
 	"IRELAND": "Ierland",
@@ -872,9 +888,11 @@
 	"LITHUANIAN": "Litouws",
 	"login-user-invalid-login": "Ongeldige inlogpoging",
 	"login-user-unable-to-send-email": "Niet in staat e-mail te versturen. Mogelijk onbekend e-mailadres.",
+	"LOGISTICS": "Logistiek",
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltees",
+	"MILITARY": "Militair",
 	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
 	"mp-left-failure-failed-to-persits-new-open-position": "Kan nieuwe open positie niet volhouden",
 	"mp-left-mnu-city": "Stad",
@@ -922,6 +940,7 @@
 	"php": "PHP",
 	"PHP": "Php",
 	"POLAND": "Polen",
+	"POLICE": "Politie",
 	"POLISH": "Pools",
 	"PORTUGAL": "Portugal",
 	"PORTUGUESE": "Portugees",
@@ -1003,6 +1022,7 @@
 	"SOFTWARE_DEVELOPER": "Softwareontwikkelaar",
 	"SOFTWARE_DEVELOPER_SHORT": "Softwareontwikkeling",
 	"SOUTHERN_EUROPE": "Zuid-Europa",
+	"SPACE": "Ruimte",
 	"SPAIN": "Spanje",
 	"SPANISH": "Spaans",
 	"stat-candidate-availability": "Beschikbaarheid van kandidaten",
@@ -1045,10 +1065,12 @@
 	"SWEDEN": "Zweden",
 	"SWEDISH": "Zweeds",
 	"SWITZERLAND": "Zwitserland",
+	"TELECOMS": "Telecom",
 	"test-manager": "Test Manager",
 	"TEST_MANAGER": "Test Manager",
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 maanden",
+	"TOURISM": "Toerisme",
 	"TURKEY": "Kalkoen",
 	"TURKISH": "Turks",
 	"UI_UX": "UI/UX",
