Industries on front end

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -855,6 +855,7 @@
 	"info-item-title-contract": "Vertrag",
 	"info-item-title-contract-type": "Vertragstyp",
 	"info-item-title-country": "Land",
+	"info-item-title-industries": "Branchen",
 	"info-item-title-languages": "Sprachen",
 	"info-item-title-location": "Standort",
 	"info-item-title-location-per": "Pro",
