--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -855,6 +855,7 @@
 	"info-item-title-contract": "Contract",
 	"info-item-title-contract-type": "Contract Type",
 	"info-item-title-country": "Country",
+	"info-item-title-industries": "Industries",
 	"info-item-title-languages": "Languages",
 	"info-item-title-location": "Location",
 	"info-item-title-location-per": " Per ",
