--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -855,6 +855,7 @@
 	"info-item-title-contract": "Contrato",
 	"info-item-title-contract-type": "Tipo de contrato",
 	"info-item-title-country": "País",
+	"info-item-title-industries": "Industrias",
 	"info-item-title-languages": "Idiomas",
 	"info-item-title-location": "Ubicación",
 	"info-item-title-location-per": "por",
