--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -855,6 +855,7 @@
 	"info-item-title-contract": "Contrat ",
 	"info-item-title-contract-type": "Type de contrat",
 	"info-item-title-country": "Pays",
+	"info-item-title-industries": "Secteurs",
 	"info-item-title-languages": "Langues",
 	"info-item-title-location": "Lieu",
 	"info-item-title-location-per": " par",
