--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -855,6 +855,7 @@
 	"info-item-title-contract": "Contratto",
 	"info-item-title-contract-type": "Tipo di contratto",
 	"info-item-title-country": "Paese",
+	"info-item-title-industries": "Industrie",
 	"info-item-title-languages": "Le lingue",
 	"info-item-title-location": "Posizione",
 	"info-item-title-location-per": "per",
