--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -855,6 +855,7 @@
 	"info-item-title-contract": "Contract",
 	"info-item-title-contract-type": "Contract type",
 	"info-item-title-country": "Land",
+	"info-item-title-industries": "Industrieën",
 	"info-item-title-languages": "Talen",
 	"info-item-title-location": "Plaats",
 	"info-item-title-location-per": " Per",
