work in progress FE savedSearchQueries

--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1009,6 +1009,7 @@
 	"rust": "Rust",
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
+	"saved-candidate-search-queries": "Ricercas",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrare",
