--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1009,6 +1009,7 @@
 	"rust": "Rust",
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
+	"saved-candidate-search-queries": "Zoektochten",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Laten zien",
