--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1009,6 +1009,7 @@
 	"rust": "Rust",
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
+	"saved-candidate-search-queries": "Suchanfragen",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Anzeigen",
