--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1009,6 +1009,7 @@
 	"rust": "Rust",
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
+	"saved-candidate-search-queries": "Searches",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Show",
