--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1009,6 +1009,7 @@
 	"rust": "Rust",
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
+	"saved-candidate-search-queries": "Búsquedas",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrar",
