working saved queries and emails

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -1010,6 +1010,12 @@
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
 	"saved-candidate-search-queries": "Suchanfragen",
+	"saved-qry-btn-create": "Erschaffe",
+	"saved-qry-btn-delete": "Löschen",
+	"saved-qry-btn-run": "Ausführen",
+	"saved-qry-btn-update": "Update",
+	"saved-qry-email-alert": "E-Mail aktivieren",
+	"saved-qry-name": "Name",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Anzeigen",
