--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -1010,6 +1010,12 @@
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"saved-candidate-search-queries": "Searches",
+	"saved-qry-btn-create": "Create",
+	"saved-qry-btn-delete": "Delete",
+	"saved-qry-btn-run": "Run",
+	"saved-qry-btn-update": "Update",
+	"saved-qry-email-alert": "Activate Email Alert",
+	"saved-qry-name": "Name",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Show",
