--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -1010,6 +1010,12 @@
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"saved-candidate-search-queries": "Búsquedas",
+	"saved-qry-btn-create": "Crear",
+	"saved-qry-btn-delete": "Borra",
+	"saved-qry-btn-run": "Ejecutar ",
+	"saved-qry-btn-update": "Actualizar",
+	"saved-qry-email-alert": "Correo Activo",
+	"saved-qry-name": "Nombre",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrar",
