--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -1010,6 +1010,12 @@
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"saved-candidate-search-queries": "Recherches",
+	"saved-qry-btn-create": "Créer",
+	"saved-qry-btn-delete": "Supprimer",
+	"saved-qry-btn-run": "Exécuter ",
+	"saved-qry-btn-update": "Réviser",
+	"saved-qry-email-alert": "Activer E-Mail",
+	"saved-qry-name": "Nom",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Montre",
