--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -1010,6 +1010,12 @@
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
 	"saved-candidate-search-queries": "Ricercas",
+	"saved-qry-btn-create": "Crea",
+	"saved-qry-btn-delete": "Elimina",
+	"saved-qry-btn-run": "Esegui ",
+	"saved-qry-btn-update": "Aggiorna",
+	"saved-qry-email-alert": "Attiva l'e-mail",
+	"saved-qry-name": "Nome",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrare",
