--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -1010,6 +1010,12 @@
 	"RUST": "Rust",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"saved-candidate-search-queries": "Zoektochten",
+	"saved-qry-btn-create": "Maken",
+	"saved-qry-btn-delete": "Verwijder",
+	"saved-qry-btn-run": "Uitvoer",
+	"saved-qry-btn-update": "Update",
+	"saved-qry-email-alert": "Activeer e-mail",
+	"saved-qry-name": "Naam",
 	"SCRUM_MASTER": "Scrum Master",
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Laten zien",
