SC filters and ordering of function and industries in new candidate page

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -760,6 +760,7 @@
 	"arenella-suggestions-search-type-name": "Name",
 	"arenella-suggestions-search-type-name-firstname-default": "Vorname",
 	"arenella-suggestions-search-type-name-surname-default": "Nachname",
+	"arenella-suggestions-security": "Sicherheitsfreigabe",
 	"arenella-suggestions-skills": "Fähigkeiten",
 	"arenella-suggestions-spanish": "Spanisch",
 	"arenella-suggestions-to": "Zu",
