--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -760,6 +760,7 @@
 	"arenella-suggestions-search-type-name": "Name",
 	"arenella-suggestions-search-type-name-firstname-default": "First Name",
 	"arenella-suggestions-search-type-name-surname-default": "Surname",
+	"arenella-suggestions-security": "Security",
 	"arenella-suggestions-skills": "Skills",
 	"arenella-suggestions-spanish": "Spanish",
 	"arenella-suggestions-to": "TO",
