--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -760,6 +760,7 @@
 	"arenella-suggestions-search-type-name": "Nombre",
 	"arenella-suggestions-search-type-name-firstname-default": "Nombre de pila",
 	"arenella-suggestions-search-type-name-surname-default": "Apellido",
+	"arenella-suggestions-security": "Seguridad",
 	"arenella-suggestions-skills": "Habilidades",
 	"arenella-suggestions-spanish": "Español",
 	"arenella-suggestions-to": "A",
