--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -760,6 +760,7 @@
 	"arenella-suggestions-search-type-name": "Nom",
 	"arenella-suggestions-search-type-name-firstname-default": "Prénom",
 	"arenella-suggestions-search-type-name-surname-default": "Nom de famille",
+	"arenella-suggestions-security": "Sécurité",
 	"arenella-suggestions-skills": "Compétences",
 	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "À",
