--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -760,6 +760,7 @@
 	"arenella-suggestions-search-type-name": "Nome",
 	"arenella-suggestions-search-type-name-firstname-default": "Nome di battesimo",
 	"arenella-suggestions-search-type-name-surname-default": "Cognome",
+	"arenella-suggestions-security": "Sicurezza",
 	"arenella-suggestions-skills": "Competenze",
 	"arenella-suggestions-spanish": "Spagnolo",
 	"arenella-suggestions-to": "A",
