--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -760,6 +760,7 @@
 	"arenella-suggestions-search-type-name": "Naam",
 	"arenella-suggestions-search-type-name-firstname-default": "Voornaam",
 	"arenella-suggestions-search-type-name-surname-default": "Achternaam",
+	"arenella-suggestions-security": "Veiligheidsmachtiging",
 	"arenella-suggestions-skills": "Vaardigheden",
 	"arenella-suggestions-spanish": "",
 	"arenella-suggestions-to": "Naar",
